--- a/euangelium/bautismo.html
+++ b/euangelium/bautismo.html
@@ -29,7 +29,7 @@
       <li class="li"><a href="#2">EL BAUTISMO DE JUAN</a></li>
       <li class="li"><a href="#3">EL BAUTISMO DE JUAN Y EL DE JESÚS</a></li>
       <li class="li"><a href="#4">LA CIRCUNCISIÓN Y EL BAUTISMO</a></li>
-      <li class="li"><a href="#5"></a></li>
+      <li class="li"><a href="#5">BAUTISMO A NIÑOS</a></li>
       <li class="li"><a href="#6"></a></li>
       <li class="li"><a href="#7"></a></li>
    
@@ -194,7 +194,111 @@
   <!-- /////////////////////////////////////////////// -->
 
 <section id="5">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">BAUTISMO A NIÑOS</h2>
+  <H3 class="cita"> SIGNO DE LA ALIANZA</H3>
+  <P>
+    Col 2:8 Mirad que nadie os engañe por medio de filosofías y huecas sutilezas, según las tradiciones de los hombres, conforme a los rudimentos del mundo, y no según Cristo. <br>
+    Col 2:9 Porque en él habita corporalmente toda la plenitud de la Deidad, <br>
+    Col 2:10 y vosotros estáis completos en él, que es la cabeza de todo principado y potestad. <br>
+    <br>
+    Col 2:11 En él también fuisteis circuncidados con circuncisión no hecha a mano, al echar de vosotros el cuerpo pecaminoso carnal, en la circuncisión de Cristo; <br>
+    Col 2:12 sepultados con él en el bautismo, en el cual fuisteis también resucitados con él, mediante la fe en el poder de Dios que le levantó de los muertos. <br>
+    El signo de la Antigua alianza fue la circuncisión <br>
+    El de la Nueva, el bautismo. <br>
+    <br>
+    <br>
+    Gén 17:7 Y estableceré mi pacto entre mí y ti, y tu descendencia después de ti en sus generaciones, por pacto perpetuo, para ser tu Dios, y el de tu descendencia después de ti. <br>
+    Quienes son los descendientes: los hijos <br>
+    El pacto consiste en recibir a Dios como Dios en mi vida, y en la vida de mis hijos. <br>
+    <br>
+    Gén 17:8 Y te daré a ti, y a tu descendencia después de ti, la tierra en que moras, toda la tierra de Canaán en heredad perpetua; y seré el Dios de ellos. <br>
+    El Señor nos ofrece, nos dice que la consecuencia de vivir el pacto es la tierra prometida que para nosotros es el cielo, por eso en el bautismo se abre el cielo <br>
+    <br>
+    Gén 17:9 Dijo de nuevo Dios a Abraham: En cuanto a ti, guardarás mi pacto, tú y tu descendencia después de ti por sus  generaciones. <br>
+    Gén 17:10 Este es mi pacto, que guardaréis entre mí y vosotros y tu descendencia después de ti: Será circuncidado todo varón de entre vosotros. <br>
+    Gén 17:11 Circuncidaréis, pues, la carne de vuestro prepucio, y será por señal del pacto entre mí y vosotros. <br>
+    <br>
+    Mis descendientes a que edad harán el pacto <br>
+    Gén 17:12 Y de edad de ocho días será circuncidado todo varón entre vosotros por vuestras generaciones; el nacido en casa, y el comprado por dinero a cualquier extranjero, que no fuere de tu linaje. <br>
+    Gén 17:13 Debe ser circuncidado el nacido en tu casa, y el comprado por tu dinero; y estará mi pacto en vuestra carne por pacto perpetuo. <br>
+    Gén 17:14 Y el varón incircunciso, el que no hubiere circuncidado la carne de su prepucio, aquella persona será cortada de su pueblo; ha violado mi pacto. <br>
+    El niño que no era circuncidado era considerado violador del pacto, él y sus padres. <br>
+    ¿Un niño de 8 días podía hacer un pacto? <br>
+    Quien lo hacía era el padre. <br>
+    Esto se repite en el Nuevo Testamento <br>
+    <br>
+    <br>
+    Hch 2:38 Pedro les dijo: Arrepentíos, y bautícese cada uno de vosotros en el nombre de Jesucristo para perdón de los pecados; y recibiréis el don del Espíritu Santo. <br>
+    Es para perdón de los pecados <br>
+    También recibirán el Espíritu Santo <br>
+    Hch 2:39 Porque para vosotros es la promesa, y para vuestros hijos, y para todos los que están lejos; para cuantos el Señor nuestro Dios llamare. <br>
+    Como en Génesis el pacto lo hacen los padres pero incluye a sus hijos. <br>
+    Es la continuidad y actualización de la promesa de Dios <br>
+    <br>
+    Hch 16:31 Ellos dijeron: Cree en el Señor Jesucristo, y serás salvo, tú y tu casa. <br>
+    Hch 16:32 Y le hablaron la palabra del Señor a él y a todos los que estaban en su casa. <br>
+    Hch 16:33 Y él, tomándolos en aquella misma hora de la noche, les lavó las heridas; y en seguida se bautizó él con
+    todos
+    los suyos. <br>
+    Por la fe de los padres se incluye a los hijos <br>
+    <br>
+    Luc 2:21 Cumplidos los ocho días para circuncidar al niño, le pusieron por nombre JESÚS, el cual le había sido puesto por el ángel antes que fuese concebido. <br>
+    Luc 2:22 Y cuando se cumplieron los días de la purificación de ellos, conforme a la ley de Moisés, le trajeron a Jerusalén para presentarle al Señor <br>
+  Primero es el pacto y su signo,Luego la presentación <br>
+    <br>
+    <br>
+    Gál 3:27 porque todos los que habéis sido bautizados en Cristo, de Cristo estáis revestidos. <br>
+    TODOS los bautizados, no solo los adultos <br>
+    Gál 3:28 Ya no hay judío ni griego; no hay esclavo ni libre; no hay varón ni mujer; porque todos vosotros sois uno en Cristo Jesús. <br>
+    TODOS somos uno en Cristo <br>
+    Gál 3:29 Y si vosotros sois de Cristo, ciertamente linaje de Abraham sois, y herederos según la promesa. <br>
+  Por el bautismo pertenecemos a Cristo <br>
+  Linaje de Abraham, nos remite a Génesis 17.7 <br>
+  Y nos recuerda la promesa <br>
+  Era del linaje de Abraham con la circuncisión, y ahora por la nueva circuncisión, que es el bautismo <br>
+    <br>
+    <br>
+<h3 class="cita">OBJECIONES </h3>
+    a. No necesitan el bautismo porque no tienen pecado. <br>
+    El bautismo no es para borrar los pecados, aunque lo hace, sino es el signo de unión a Cristo por la alianza nueva.<br><br>
+    Dicen: <br>
+    Mt 19,13-15 Lc 18,15-17 <br>
+    <br>
+    Mar 10:13 Y le presentaban niños para que los tocase; y los discípulos reprendían a los que los presentaban. <br>
+    Los niños eran llevados ante el Señor por sus padres <br>
+    Los discípulos reprendían a los padres pues los niños no tienen uso de razón. <br>
+    Los niños deben acercarse al Señor aunque no tengan uso de razón <br>
+    <br>
+    Mar 10:14 Viéndolo Jesús, se indignó, y les dijo: Dejad a los niños venir a mí, y no se lo impidáis; porque de los tales es el reino de Dios. <br>
+    Así no tengan uso de razón los niños deben acercarse a Dios, y para que no vuelva a suceder quedó escrito <br>
+    <br>
+    Mar 10:15 De cierto os digo, que el que no reciba el reino de Dios como un niño, no entrará en él. <br>
+    Los adultos deben parecerse a los niños, no los niños a los adultos. <br>
+    Un niño no tiene que hacerse como niño ya es niño <br>
+    Los niños ya pueden recibir el reino, los adultos deben hacerse como ellos <br>
+    <br>
+    Mar 10:16 Y tomándolos en los brazos, poniendo las manos sobre ellos, los bendecía. <br>
+    Eran niños pequeños pues podían estar en brazos <br>
+    El bautismo es la bendición de Dios <br>
+    <br>
+    1Co 12:12 Porque así como el cuerpo es uno, y tiene muchos miembros, pero todos los miembros del cuerpo, siendo muchos, son un solo cuerpo, así también Cristo. <br>
+    1Co 12:13 Porque por un solo Espíritu fuimos todos bautizados en un cuerpo, sean judíos o griegos, sean esclavos o libres; y a todos se nos dio a beber de un mismo Espíritu. <br>
+  Somos parte de Cristo, nos acercamos nos unimos a él por el bautismo <br>
+    b. Sólo los que pueden creer deben bautizarse <br>
+    Mar 16:15 Y les dijo: Id por todo el mundo y predicad el evangelio a toda criatura. <br>
+    Mar 16:16 El que creyere y fuere bautizado, será salvo; mas el que no creyere, será condenado. <br>
+  Siempre se les predica a adultos, a los padres <br>
+  La secuencia: predicar, creer y bautizar <br>
+    Mat 28:19 Por tanto, id, y haced discípulos a TODAS las naciones, bautizándolos en el nombre del Padre, y del Hijo, y del Espíritu Santo; <br>
+    Mat 28:20 enseñándoles que guarden TODAS las cosas que os he mandado; y he aquí yo estoy con vosotros TODOS los días, hasta el fin del mundo. Amén. <br>
+  Manda el Señor a predicar,bautizar y luego a enseñar. <br>
+    <br>
+    Mar 4:26 Decía además: Así es el reino de Dios, como cuando un hombre echa semilla en la tierra; <br>
+    Así es el reino <br>
+    Mar 4:27 y duerme y se levanta, de noche y de día, y la semilla brota y crece sin que él sepa cómo. <br>
+    Sin que él sepa como <br>
+       <br> 
+  </P>
 </section>
   <!-- /////////////////////////////////////////////// -->
 
@@ -232,111 +336,7 @@
     Luc 7:30 Mas los fariseos y los intérpretes de la ley desecharon los designios de Dios respecto de sí mismos, no siendo bautizados por Juan. <br>
     El plan de Dios, su Voluntad, su Justicia; es la Nueva Alianza en Cristo cuya señal es el bautismo. Los que no se bautizan desechan el designio de Dios para sí. <br>
     <br>
-    3. SIGNO DE LA ALIANZA <br>
-    Col 2:8 Mirad que nadie os engañe por medio de filosofías y huecas sutilezas, según las tradiciones de los hombres, conforme a los rudimentos del mundo, y no según Cristo. <br>
-    Col 2:9 Porque en él habita corporalmente toda la plenitud de la Deidad, <br>
-    Col 2:10 y vosotros estáis completos en él, que es la cabeza de todo principado y potestad. <br>
-    <br>
-    Col 2:11 En él también fuisteis circuncidados con circuncisión no hecha a mano, al echar de vosotros el cuerpo pecaminoso carnal, en la circuncisión de Cristo; <br>
-    Col 2:12 sepultados con él en el bautismo, en el cual fuisteis también resucitados con él, mediante la fe en el poder de Dios que le levantó de los muertos. <br>
-    El signo de la Antigua alianza fue la circuncisión <br>
-    El de la Nueva, el bautismo. <br>
-    <br>
-    <br>
-    Gén 17:7 Y estableceré mi pacto entre mí y ti, y tu descendencia después de ti en sus generaciones, por pacto perpetuo, para ser tu Dios, y el de tu descendencia después de ti. <br>
-    Quienes son los descendientes: los hijos <br>
-    El pacto consiste en recibir a Dios como Dios en mi vida, y en la vida de mis hijos. <br>
-    <br>
-    Gén 17:8 Y te daré a ti, y a tu descendencia después de ti, la tierra en que moras, toda la tierra de Canaán en heredad perpetua; y seré el Dios de ellos. <br>
-    El Señor nos ofrece, nos dice que la consecuencia de vivir el pacto es la tierra prometida que para nosotros es el cielo, por eso en el bautismo se abre el cielo <br>
-    <br>
-    Gén 17:9 Dijo de nuevo Dios a Abraham: En cuanto a ti, guardarás mi pacto, tú y tu descendencia después de ti por sus  generaciones. <br>
-    Gén 17:10 Este es mi pacto, que guardaréis entre mí y vosotros y tu descendencia después de ti: Será circuncidado todo varón de entre vosotros. <br>
-    Gén 17:11 Circuncidaréis, pues, la carne de vuestro prepucio, y será por señal del pacto entre mí y vosotros. <br>
-    <br>
-    <br>
-    Mis descendientes a que edad harán el pacto <br>
-    Gén 17:12 Y de edad de ocho días será circuncidado todo varón entre vosotros por vuestras generaciones; el nacido en casa, y el comprado por dinero a cualquier extranjero, que no fuere de tu linaje. <br>
-    Gén 17:13 Debe ser circuncidado el nacido en tu casa, y el comprado por tu dinero; y estará mi pacto en vuestra carne por pacto perpetuo. <br>
-    Gén 17:14 Y el varón incircunciso, el que no hubiere circuncidado la carne de su prepucio, aquella persona será cortada de su pueblo; ha violado mi pacto. <br>
-    El niño que no era circuncidado era considerado violador del pacto, él y sus padres. <br>
-    ¿Un niño de 8 días podía hacer un pacto? <br>
-    Quien lo hacía era el padre. <br>
-    Esto se repite en el Nuevo Testamento <br>
-    <br>
-    <br>
-    <br>
-    Hch 2:38 Pedro les dijo: Arrepentíos, y bautícese cada uno de vosotros en el nombre de Jesucristo para perdón de los
-    pecados; y recibiréis el don del Espíritu Santo. <br>
-    Es para perdón de los pecados <br>
-    También recibirán el Espíritu Santo <br>
-    Hch 2:39 Porque para vosotros es la promesa, y para vuestros hijos, y para todos los que están lejos; para cuantos el Señor nuestro Dios llamare. <br>
-    Como en Génesis el pacto lo hacen los padres pero incluye a sus hijos. <br>
-    Es la continuidad y actualización de la promesa de Dios <br>
-    <br>
-    Hch 16:31 Ellos dijeron: Cree en el Señor Jesucristo, y serás salvo, tú y tu casa. <br>
-    Hch 16:32 Y le hablaron la palabra del Señor a él y a todos los que estaban en su casa. <br>
-    Hch 16:33 Y él, tomándolos en aquella misma hora de la noche, les lavó las heridas; y en seguida se bautizó él con
-    todos
-    los suyos. <br>
-    Por la fe de los padres se incluye a los hijos <br>
-    <br>
-    Luc 2:21 Cumplidos los ocho días para circuncidar al niño, le pusieron por nombre JESÚS, el cual le había sido puesto por el ángel antes que fuese concebido. <br>
-    Luc 2:22 Y cuando se cumplieron los días de la purificación de ellos, conforme a la ley de Moisés, le trajeron a Jerusalén para presentarle al Señor <br>
-   Primero es el pacto y su signo,Luego la presentación <br>
-    <br>
-    <br>
-    Gál 3:27 porque todos los que habéis sido bautizados en Cristo, de Cristo estáis revestidos. <br>
-    TODOS los bautizados, no solo los adultos <br>
-    Gál 3:28 Ya no hay judío ni griego; no hay esclavo ni libre; no hay varón ni mujer; porque todos vosotros sois uno en Cristo Jesús. <br>
-    TODOS somos uno en Cristo <br>
-    Gál 3:29 Y si vosotros sois de Cristo, ciertamente linaje de Abraham sois, y herederos según la promesa. <br>
-   Por el bautismo pertenecemos a Cristo <br>
-   Linaje de Abraham, nos remite a Génesis 17.7 <br>
-   Y nos recuerda la promesa <br>
-   Era del linaje de Abraham con la circuncisión, y ahora por la nueva circuncisión, que es el bautismo <br>
-    <br>
-    <br>
-    4. OBJECIONES <br>
-    a. No necesitan el bautismo porque no tienen pecado. <br>
-    El bautismo no es para borrar los pecados, aunque lo hace, sino es el signo de unión a Cristo por la alianza nueva.<br><br>
-    Dicen: <br>
-    Mt 19,13-15 Lc 18,15-17 <br>
-    <br>
-    Mar 10:13 Y le presentaban niños para que los tocase; y los discípulos reprendían a los que los presentaban. <br>
-    Los niños eran llevados ante el Señor por sus padres <br>
-    Los discípulos reprendían a los padres pues los niños no tienen uso de razón. <br>
-    Los niños deben acercarse al Señor aunque no tengan uso de razón <br>
-    <br>
-    Mar 10:14 Viéndolo Jesús, se indignó, y les dijo: Dejad a los niños venir a mí, y no se lo impidáis; porque de los tales es el reino de Dios. <br>
-    Así no tengan uso de razón los niños deben acercarse a Dios, y para que no vuelva a suceder quedó escrito <br>
-    <br>
-    Mar 10:15 De cierto os digo, que el que no reciba el reino de Dios como un niño, no entrará en él. <br>
-    Los adultos deben parecerse a los niños, no los niños a los adultos. <br>
-    Un niño no tiene que hacerse como niño ya es niño <br>
-    Los niños ya pueden recibir el reino, los adultos deben hacerse como ellos <br>
-    <br>
-    Mar 10:16 Y tomándolos en los brazos, poniendo las manos sobre ellos, los bendecía. <br>
-    Eran niños pequeños pues podían estar en brazos <br>
-    El bautismo es la bendición de Dios <br>
-    <br>
-    1Co 12:12 Porque así como el cuerpo es uno, y tiene muchos miembros, pero todos los miembros del cuerpo, siendo muchos, son un solo cuerpo, así también Cristo. <br>
-    1Co 12:13 Porque por un solo Espíritu fuimos todos bautizados en un cuerpo, sean judíos o griegos, sean esclavos o libres; y a todos se nos dio a beber de un mismo Espíritu. <br>
-   Somos parte de Cristo, nos acercamos nos unimos a él por el bautismo <br>
-    b. Sólo los que pueden creer deben bautizarse <br>
-    Mar 16:15 Y les dijo: Id por todo el mundo y predicad el evangelio a toda criatura. <br>
-    Mar 16:16 El que creyere y fuere bautizado, será salvo; mas el que no creyere, será condenado. <br>
-   Siempre se les predica a adultos, a los padres <br>
-   La secuencia: predicar, creer y bautizar <br>
-    Mat 28:19 Por tanto, id, y haced discípulos a TODAS las naciones, bautizándolos en el nombre del Padre, y del Hijo, y del Espíritu Santo; <br>
-    Mat 28:20 enseñándoles que guarden TODAS las cosas que os he mandado; y he aquí yo estoy con vosotros TODOS los días, hasta el fin del mundo. Amén. <br>
-   Manda el Señor a predicar,bautizar y luego a enseñar. <br>
-    <br>
-    Mar 4:26 Decía además: Así es el reino de Dios, como cuando un hombre echa semilla en la tierra; <br>
-    Así es el reino <br>
-    Mar 4:27 y duerme y se levanta, de noche y de día, y la semilla brota y crece sin que él sepa cómo. <br>
-    Sin que él sepa como <br>
-    <br>
+   
     EL BAUTISMO <br>
     Introducción <br>
     1. Definición <br>
