--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -24,6 +24,7 @@
     <h1 class="init">IGLESIA</h1>
     <div>
       <ol>
+        <li class="li"><a href="#10">QUE ES LA IGLESIA</a></li>
         <li class="li"><a href="#01">UNA</a></li>
         <li class="li"><a href="#02">SANTA</a></li>
         <li class="li"><a href="#03">CATÓLICA</a></li>
@@ -667,6 +668,33 @@
       <li>2Te 2,9 Milagros</li>
       <li>1Pe 2,7 los que no creen en la Palabra</li>
     </ol>
+
+     </section>
+    <!-- ********************************************* -->
+     <section id="10">
+      <h2>  QUE ES LA IGLESIA</h2>
+    <ol>
+      <li>Los no católicos aseguran que la iglesia, es invisble, la constituyen los que guardan la doctrina verdadera. Y la relacionan con el templo.</li>
+      <h3>LA IGLESIA ES:</h3>
+      <li>Mat 16:6 Jesús les dijo: «Abrid los ojos y guardaos de la levadura de los fariseos y saduceos.» </li>
+      <li>Mat 16:12 Entonces entendieron que no había querido decir que se guardasen de la levadura de los panes, sino de la doctrina de los fariseos y saduceos*. </li>
+      <li>Mat 16-13-20 Ante las dudas (13) La iglesia es quien enseñará correctamente quien es Jesucristo</li>
+      <li>Hch 2:47 alabando[1] a Dios* y gozando de la simpatía de todo el pueblo. Por lo demás, el Señor agregaba al[2] grupo a los que cada día se iban salvando*. </li>
+      <li>Jn 21,15 el Señor ratifica a Pedro, pudo decircelo a otro discipulo que estaba allí.</li>
+      <li>1Ti 3:15 pero si tardo, para que sepas cómo hay que portarse en la casa de Dios, que es la Iglesia de Dios vivo, columna y fundamento de la verdad*</li>
+    </ol>
+
+     </section>
+    <!-- ********************************************* -->
+     <section id="11">
+      <h2></h2>
+     
+
+     </section>
+    <!-- ********************************************* -->
+     <section id="12">
+      <h2></h2>
+     
 
      </section>
     <!-- ********************************************* -->
