--- a/latin/Latin.html
+++ b/latin/Latin.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
   <title>LATIN</title>
-
+<style>
+  .img{
+    width: 50em;
+  }
+</style>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -58,11 +62,8 @@
     <li>Renacentista Nebrija</li>
     <li>Neo latín Galvani, Spinoza, Newton</li>
     <li>Latín Cristiano <br> Tertuliano (Apologeticum) Lactancio (Divinae institucionis) Jerónimo (Vulgata) <br>Ambrosio (De Sacramentis) Agustín (Confesiones) </li>
- 
   </ol>
-  <p>
-    En la cruz el texto fue escrito en hebreo, griego y latín
-  </p>
+  <p>En la cruz el texto fue escrito en hebreo, griego y latín</p>
 <h2>El Magisterio</h2>
 <ol>
   <li>Trento<br>Celebrar en lengua latina y vulgar</li>
@@ -78,9 +79,27 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="02">
-  <h2 class="subtitulo"></h2>
-  <p></p>
- <ol class="ad">
+  <h2 class="subtitulo">PRONUNCIACIÓN</h2>
+  <p>Se usa la pronunciación romana, en este latín eclesiastico, no tiene palabras agudas, ni tiene acentos.</p>
+  <H3 class="lema">LAS VOCALES</H3>
+  <img src="../media/latin/vocales1.png" alt="vocales1" class="img"><br><br>
+  <img src="../media/latin/vocalesLigadas1.png" alt="vocalesLigadas1" class="img">
+  <img src="../media/latin/diptongos1.png" alt="diptongos1" class="img">
+  <img src="../media/latin/consonantes1.png" alt="consonantes1" class="img">
+  <img src="../media/latin/consonantes2.png" alt="consonantes2" class="img">
+  <img src="../media/latin/consonantes3.png" alt="consonantes3" class="img">
+  <img src="../media/latin/practica0201.png" alt="practica0201" class="img">
+  <ol class="ad">
+    <li>-</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
+  
+
 
 
 </section>
