--- a/latin/Nobilis.Phrases.html
+++ b/latin/Nobilis.Phrases.html
@@ -39,13 +39,108 @@
   <h1> PENSAMIENTOS</h1>
   <div>
     <ol>
-      <li class="li"><a href="#0828">AGUSTIN DE HIPONA</a></li>
-      <li class="li"><a href="#1017">IGNACIO DE ANTIOQUIA</a></li>
-      <li class="li"><a href="#03"></a></li>
+      <li class="li"><a href="#0131">31-01 DON BOSCO </a></li>
+      <li class="li"><a href="#0828">28-08 AGUSTIN DE HIPONA </a></li>
+      <li class="li"><a href="#1017">17-10 IGNACIO DE ANTIOQUIA 17-10</a></li>
+      <li class="li"><a href="#"></a></li>
+      <li class="li"><a href="#"></a></li>
+      <li class="li"><a href="#"></a></li>
 
     </ol>
 
   </div>
+</section>
+<!-- ****************************************************************** -->
+<section id="0131">
+  <h2 class="subtitulo">DON BOSCO 31-01</h2>
+  <img src="../media/santos/don bosco.png" alt="don bosco" class="img">
+  <ol class="ad">
+    <span>DEO PLACENT RES AMORE FACTAE.</span>
+    <li>A DIOS LE PLACE LAS COSAS HECHAS CON AMOR.</li>
+    <span>LAETITIA, STUDIUM ET PIETAS: OPTIMUM CONSILIUM AD FELICITATEM.</span>
+    <li>ALEGRÍA, ESTUDIO Y PIEDAD: ES EL MEJOR PROGRAMA PARA SER FELIZ.</li>
+    <span>CARITATE ET PATIENTIA OMNIA SUPERANTUR.</span>
+    <li>CON CARIDAD Y PACIENCIA TODO SE ALCANZA.</li>
+    <span>PARVIS MORTIFICATIONIBUS VINCUNTUR IMPETUS DIABOLI.</span>
+    <li>CON PEQUEÑAS MORTIFICACIONES SE VENCEN LOS ATAQUES DEL DEMONIO.</li>
+    <span>CONSCIENTIA PURA ET MUNDA, VIA AD SERVIENDUM DOMINO.</span>
+    <li>CONCIENCIA PURA Y LIMPIA, LA FORMA PARA SERVIR AL SEÑOR.</li>
+    <span>QUOT ANIMAE BONI EXEMPLI GRATIA ATTRAHI POSSUNT.</span>
+    <li>CUÁNTAS ALMAS SE PUEDEN ATRAER CON EL BUEN EJEMPLO</li>
+    <span>DEUS FAVET HOMINI LAETO.</span>
+    <li>DIOS FAVORECE AL HOMBRE ALEGRE</li>
+    <span>DIABOLUS NON POTEST RESISTERE HOMINI LAETO.</span>
+    <li>EL DEMONIO NO PUEDE RESISTIR A LA GENTE ALEGRE.</li>
+    <span>PRAETERITUM MAGISTER FUTURORUM ESSE DEBET.</span>
+    <li>EL PASADO DEBE SER MAESTRO DEL FUTURO.</li>
+    <span>VIRTUS CONSTANS POTIOR EST QUAM GRATIAE EXTRAORDINARIAE.</span>
+    <li>ES MÁS IMPORTANTE UNA VIRTUD CONSTANTE, QUE LAS GRACIAS EXTRAORDINARIAS.</li>
+    <span>PATIENTIA INSEPARABILIS COMES HABENDA EST.</span>
+    <li>HAY QUE TENER LA PACIENCIA COMO COMPAÑERA INSEPARABLE.</li>
+    <span>BENE FAC DUM TEMPUS HABES.</span>
+    <li>HAZ EL BIEN MIENTRAS AÚN TENGAS TIEMPO.</li>
+    <span>DULCEDO IN SERMONE, OPERE ET CORRECTIONE, OMNIA ET OMNES VINCIT.</span>
+    <li>LA DULZURA EN EL HABLAR, EN EL OBRAR Y EN REPRENDER, LO GANA TODO Y A TODOS.</li>
+    <span>RELIGIO NON IN VERBIS CONSISTIT; OPUS EST EAM OPERIBUS DEMONSTRARE.</span>
+    <li>LA RELIGIÓN NO CONSISTE EN PALABRAS; HACE FALTA DEMOSTRARLA CON OBRAS.</li>
+    <span>MAXIMA SATISFACTIO MEA EST TE LAETUM VIDERE.</span>
+    <li>MI MAYOR SATISFACCIÓN ES VERTE ALEGRE</li>
+    <span>DUM LAETITIAM CONSERVAS, PECCATUM A TE LONGE ERIT.</span>
+    <li>MIENTRAS CONSERVES LA ALEGRÍA, TE ALEJARÁS DEL PECADO.</li>
+    <span>SEMPER LAETUS APPARE, SED SINCERUS SIT RISUS TUUS.</span>
+    <li>MUÉSTRATE SIEMPRE ALEGRE, PERO QUE TU SONRISA SEA SINCERA.</li>
+    <span>NON SATIS EST AMARE PUEROS; OPORTET UT SENTIANT SE AMARI.</span>
+    <li>NO BASTA AMAR A LOS NIÑOS, ES PRECISO QUE ELLOS SE DEN CUENTA QUE SON AMADOS.</li>
+    <span>NON SATIS EST CRUCEM PORTARE, SED EAM DILIGERE NECESSE EST.</span>
+    <li>NO BASTA CARGAR LA CRUZ ES NECESARIO AMARLA.</li>
+    <span>NUMQUAM OTIOSI SITIS; SI VOS NON LABORATIS, DIABOLUS LABORABIT.</span>
+    <li>NO ESTÉN NUNCA DESOCUPADOS; SI NO TRABAJAN USTEDES, TRABAJARÁ EL DEMONIO.</li>
+    <span>OCCASIONEM BONI FACIENDI NUMQUAM PRAETERMITTAMUS.</span>
+    <li>NUNCA DEJEMOS ESCAPAR LA OCASIÓN QUE SE NOS PRESENTA PARA HACER EL BIEN.</li>
+    <span>OBLITUS ESTO BENEFICIORUM QUAE FECISTI, NON AUTEM QUAE ACCEPISTI.</span>
+    <li>OLVIDA LOS FAVORES HECHOS, PERO NO LOS RECIBIDOS.</li>
+    <span>UT BENE INFLUEAS IN PUEROS, OPORTET EORUM LAETITIIS COMMUNICARE.</span>
+    <li>"PARA INFLUIR POSITIVAMENTE EN LOS NIÑOS, ES ESENCIAL COMPARTIR SUS ALEGRÍAS.</li>
+    <span>EFFACISSIMA IACULATORIA HAEC EST: MARIA AUXILIATRIX, ORA PRO NOBIS.</span>
+    <li>"LA JACULATORIA MÁS EFICAZ ES ÉSTA: MARÍA AUXILIADORA, RUEGA POR NOSOTROS</li>
+    <span>UT OMNIS CONFESSIO SIT TAM SINCERA AC SI ULTIMA TUA FORET.</span>
+    <li>QUE CADA CONFESIÓN SEA TAN SINCERA COMO SI FUESES LA ÚLTIMA DE VUESTRA VIDA.</li>
+    <span>QUI CONSCIENTIAM PACATAM HABET, OMNIA POSSIDET.</span>
+    <li>QUIEN TIENE LA CONCIENCIA EN PAZ, LO TIENE TODO.</li>
+    <span>MEMINERITIS EDUCATIONEM PENDERE A FORMATIONE CORDIS.</span>
+    <li>RECORDAD QUE LA EDUCACIÓN DEPENDE DE LA FORMACIÓN DEL CORAZÓN.</li>
+    <span>BONUS ESSE NON CONSISTIT IN NON PECCARE, SED IN CORRIGENDO SE.</span>
+    <li>SER BUENO NO CONSISTE EN NO COMETER NINGUNA FALTA, SINO EN SABER ENMENDARSE.</li>
+    <span>SI COOPERARIS AD SALUTEM ANIMAE, TUAM IPSIUS SERVAS.</span>
+    <li>SI COOPERAS A SALVAR UN ALMA, ASEGURAS LA TUYA PROPIA.</li>
+    <span>SINE RISU AMICITIA DEMONSTRARI NON POTEST.</span>
+    <li>SIN SONRISA NO ES POSIBLE DEMOSTRAR AMISTAD.</li>
+
+   </ol>
+
+</section>
+<!-- ****************************************************************** -->
+<section id="">
+  <h2 class="subtitulo"></h2>
+  <ol class="ad">
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+    <span></span>
+    <li></li>
+   </ol>
+
 </section>
 <!-- ****************************************************************** -->
 <section id="1017">
@@ -191,7 +286,7 @@
 <!-- ****************************************************************** -->
 <section id="">
   <h2 class="subtitulo"></h2>
-  <ol>
+  <ol class="ad">
     <span></span>
     <li></li>
     <span></span>
@@ -214,7 +309,7 @@
 <!-- ****************************************************************** -->
 <section id="">
   <h2 class="subtitulo"></h2>
-  <ol>
+  <ol class="ad">
     <span></span>
     <li></li>
     <span></span>
@@ -237,7 +332,7 @@
 <!-- ****************************************************************** -->
 <section id="">
   <h2 class="subtitulo"></h2>
-  <ol>
+  <ol class="ad">
     <span></span>
     <li></li>
     <span></span>
@@ -260,7 +355,7 @@
 <!-- ****************************************************************** -->
 <section id="">
   <h2 class="subtitulo"></h2>
-  <ol>
+  <ol class="ad">
     <span></span>
     <li></li>
     <span></span>
@@ -283,7 +378,7 @@
 <!-- ****************************************************************** -->
 <section id="">
   <h2 class="subtitulo"></h2>
-  <ol>
+  <ol class="ad">
     <span></span>
     <li></li>
     <span></span>
