--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -19,7 +19,7 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
+    <h1 class="init">APOLOGÍA</h1>
    
     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
